--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -26,6 +26,16 @@ steps:
       - us-south1-docker.pkg.dev/venturini-brazil/flask-app/web-api:latest
       - .
 
+  - name: aquasec/trivy:latest
+    id: Vulnerability scanning
+    args:
+      - --exit-code
+      - 1
+      - --severity
+      - HIGH
+      - image
+      - us-south1-docker.pkg.dev/venturini-brazil/flask-app/web-api:$BUILD_ID
+
   - name: gcr.io/cloud-builders/docker
     id: Store container image with BUILD_ID tag
     args:
